<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ss"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="20dp">

        <ImageView
            android:id="@+id/logoIn"
            android:layout_width="190dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="80dp"
            android:background="@drawable/lg_login_register"
            android:textAlignment="center"
            />


        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="150dp"
            android:visibility="gone"
            tools:ignore="ExtraText,MissingConstraints"
            tools:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp"
        android:layout_marginTop="80dp">

        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/sign_in"
            android:fontFamily="@font/inter"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"/>


        <by.marcel.grow_right.customeview.EditTextEmail
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/inter"
            android:hint="Email"
            android:textColor="@color/black"/>

        <by.marcel.grow_right.customeview.EditTextPassword
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="textPassword"
            android:fontFamily="@font/inter"
            android:hint="Password"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blue_motion_ss"
            android:text="@string/sign_in"
            android:textColor="@color/white">
        </Button>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="130dp"
            android:fontFamily="@font/inter"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textColor="@color/dark" />

        <TextView
            android:id="@+id/tv_not_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="90dp"
            android:fontFamily="@font/inter"
            android:text="@string/if_you_not_have_the_account"
            android:textAlignment="center"
            android:textColor="@color/dark" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/blue_motion_ss"
            android:text="@string/sign_up"
            android:textColor="@color/white">
        </Button>

    </LinearLayout>

</LinearLayout>