<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ss"
    android:orientation="vertical"
    tools:context=".ui.result.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="ExtraText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="210dp"
                android:background="@drawable/bc_circel" />

            <ImageView
                android:id="@+id/resultBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/baseline_arrow_back_24" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/inter"
                    android:gravity="center"
                    android:text="@string/result"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/baseline_border_outer_24"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:text="@string/name"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tvNameResult"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:text="@string/result"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:text="@string/gender"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tvGenderResult"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:text="@string/result"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:text="@string/height"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:textAlignment="center"
                            android:text="@string/weight"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:textAlignment="center"
                            android:text="@string/age"
                            android:textColor="@color/black"
                            android:textSize="18sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="4dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvHeight"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:textAlignment="center"
                            android:text="@string/result"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tvWeight"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:textAlignment="center"
                            android:text="@string/result"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tvAge"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:textAlignment="center"
                            android:text="@string/result"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/inter"
                    android:gravity="center"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                //textviewModeling

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/baseline_border_outer_24"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:textAlignment="center"
                            android:text="@string/resultH"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:textAlignment="center"
                            android:text="@string/resultW"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:textAlignment="center"
                            android:text="@string/resultA"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/zsHeight"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:textAlignment="center"
                            android:text="@string/result"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/zsWeight"
                            android:layout_width="94dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:textAlignment="center"
                            android:text="@string/result"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/zsAge"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:textAlignment="center"
                            android:text="@string/result"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="15dp"
                    android:autofillHints="Your description"
                    android:background="@drawable/baseline_border_outer_24"
                    android:fontFamily="@font/inter"
                    android:gravity="center_vertical"
                    android:inputType="textMultiLine"
                    android:maxLines="3"
                    android:minLines="4"
                    android:padding="10dp"
                    android:scrollbars="vertical"
                    android:text="@string/description"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/blue_motion_ss"
                    android:text="@string/save"
                    android:textColor="@color/white"></Button>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>



    </LinearLayout>



</LinearLayout>